@@ -15,7 +15,7 @@
 href="mailto:rodsmith@rodsbooks.com">rodsmith@rodsbooks.com</a></p>
 
 <p>Originally written: 3/14/2012; last Web page update:
-10/6/2012, referencing rEFInd 0.4.6</p>
+11/5/2012, referencing rEFInd 0.4.6.3</p>
 
 
 <p>I'm a technical writer and consultant specializing in Linux technologies. This Web page is provided free of charge and with no annoying outside ads; however, I did take time to prepare it, and Web hosting does cost money. If you find this Web page useful, please consider making a small donation to help keep this site up and running. Thanks!</p>
@@ -181,7 +181,7 @@ href="mailto:rodsmith@rodsbooks.com">rodsmith@rodsbooks.com</a></p>
 </tr>
 <tr>
    <td><i>Insert</i>, <i>F2</i>, or <i>+</i></td>
-   <td>Opens the selection's submenu, which is most useful with Mac OS X, ELILO, and Linux kernels with EFI stub loader support</td>
+   <td>From the main menu, opens the selection's submenu, which is most useful with Mac OS X, ELILO, and Linux kernels with EFI stub loader support; in a submenu, opens a line editor enabling editing of boot options</td>
 </tr>
 <tr>
    <td><i>F10</i></td>
